internal/xds/translator/testdata/out/extension-xds-ir/http-route-custom-backends-partial.routes.yaml
- ignorePortInHostMatching: true
  name: multiple-custom-backends-listener
  virtualHosts:
  - domains:
    - '*'
    name: multiple-custom-backends-listener/*
    routes:
    - match:
        pathSeparatedPrefix: /s3
      name: s3-route
      route:
        cluster: s3-backend-dest
        upgradeConfigs:
        - upgradeType: websocket
